<resources>
    <string name="app_name">Neqabty</string>
    <string name="home_title">Home</string>
    <string name="news_title">Syndicate News</string>
    <string name="general_news">General News</string>
    <string name="payments_title">Payments</string>
    <string name="about_title">About Syndicate</string>
    <string name="settings_title">Settings</string>
    <string name="contactus_title">Contact Us</string>
    <string name="suggestions">Suggestions</string>
    <string name="complains">Complains</string>
    <string name="aboutapp_title">About App</string>
    <string name="help_title">Help</string>
    <string name="notifications_settings">Notifications</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="developed_by">Implemented by Neqabty</string>
    <string name="app_version">Version %s</string>
    <string name="main">Main Actors</string>
    <string name="welcome">Welcome to Neqabty</string>
    <string name="menu_memberName">Member Name:  <![CDATA[<font color="#00BCD4">%s</font>]]></string>
    <string name="menu_mobileNumber">Phone Number:  <![CDATA[<font color="#00BCD4">%s</font>]]></string>
    <string name="logout_title">Logout</string>
    <string name="login_title">Login</string>
    <string name="change_syndicate">Other Syndicates</string>
    <string name="neqabty_mega">Neqabty</string>
    <string name="neqabty">NeQabty application is an interactive platform that aims to automate union services for members supported by the latest financial technology and artificial intelligence techniques to facilitate obtaining union services with minimal time and effort.</string>
    <string name="more">More...</string>
    <string name="details">Details:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="delivery_method">Delivery Method :</string>
    <string name="payment_card">Bank cards (Visa MasterCard meeza)</string>
    <string name="payment_channel">Opay payment outlets</string>
    <string name="payment_store_locator">To know the nearest payment outlets around you
        <![CDATA[<font color="#41941b"><u> Click Here</u></font>]]>
    </string>
    <string name="payment_fawry">Fawry payment outlets</string>
    <string name="payment_wallet">Electronic Wallets</string>
    <string name="payment_meeza">Meeza</string>
    <string name="payment_reference">You can now pay from the nearest payment outlet until the subscription renewal is confirmed
        Payment code:</string>
    <string name="payment_reference_without_code">You can now pay from the nearest payment outlet until the subscription renewal is confirmed</string>
    <string name="payment_canceled">Payment has been cancelled</string>
    <string name="payment_successful">Payment completed successfully\n
Operation No.</string>
    <string name="syndicates">Syndicates</string>
    <string name="alert_title">Alert</string>
    <string name="ok_btn">Ok</string>
    <string name="cancel_btn">Cancel</string>
    <string name="no_btn">No</string>
    <string name="membership_id">Membership Id</string>
    <string name="not_found">Sorry, this number is not registered in the syndicate, please log in.</string>
    <string name="next">Next</string>
    <string name="service">Service</string>
    <string name="services">Services</string>
    <string name="trips">Trips</string>
    <string name="subscription_model">Subscription</string>
    <string name="healthcare">Health Care</string>
    <string name="mashat">المعاشات</string>
    <string name="all_trips">Trips</string>
    <string name="courses">Courses</string>
    <string name="copy_text">Copy</string>
    <string name="no_syndicates">There are no syndicate</string>
    <string name="alert">Alert</string>
    <string name="enter_mermber_ship_id">Enter the membership number</string>
    <string name="select_service">Select service</string>
    <string name="service_unavailable">  The service will be activated soon</string>
    <string name="new_update">Please update the app to the latest version to be able to use the app.</string>
    <string name="other_services">Other services</string>
    <string name="neqabty_news">Syndicate news</string>
    <string name="last_fee_year">Last Subscription</string>
    <string name="current_fee_year">Current Subscription</string>
    <string name="card_price">Card Price</string>
    <string name="late_subscriptions">Late Subscriptions</string>
    <string name="delay_fine">Delay Fine</string>
    <string name="total_pric">Total</string>
    <string name="successful_payment">successful payment</string>
    <string name="successful_pay">Payment completed successfully</string>
    <string name="receipt">Receipt</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name :</string>
    <string name="membership_number">Membership Id :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="phone_number_"><![CDATA[<font color="#000000">Phone Number :</font>]]></string>
    <string name="receipt_info">Receipt Details</string>
    <string name="syndicate">Syndicate :</string>
    <string name="service_name">Service Name :</string>
    <string name="receipt_number">Receipt Number :</string>
    <string name="receipt_date">receipt date :</string>
    <string name="net_amount">net amount :</string>
    <string name="total_fees">Total Fees :</string>
    <string name="pdf">download receipt Pdf</string>
    <string name="profile">Profile</string>
    <string name="user_name">Name</string>
    <string name="membership">Membership Id</string>
    <string name="nationalid">National Id</string>
    <string name="update_info">Update Info</string>
    <string name="add_member">Add Member</string>
    <string name="cardrenewal">card renewal request.</string>
    <string name="address">Delivery Address</string>
    <string name="address_">Address :</string>
    <string name="year">Year</string>
    <string name="year_">Year :</string>
    <string name="order_status">Order Status :</string>
    <string name="personal_photo">Personal Photo</string>
    <string name="send_order">Send Order</string>
    <string name="ministry_license">Ministry license renewal request.</string>
    <string name="agree">Agree</string>
    <string name="rooted">This device is not secure, you can not use this application.</string>
    <string name="from_branches">Receive from sun syndicate</string>
    <string name="to_home">Home shipping</string>
    <string name="unsuccessfull_payment">Unsuccessful Payment</string>
    <string name="un_paid">Un Paid Receipt</string>
    <string name="sel_service">Select Service</string>
    <string name="bvt">الشكاوي والمقترحات</string>
    <string name="account_info">بيانات الحساب</string>

    <string name="member_name">Name : %s</string>
    <string name="member_id">Membership Id : %s</string>
    <string name="egp"> EGP</string>
    <string name="total_after_pay_fees"> Total after payment fees :  %s EGP</string>
    <string name="total_after_delivery_fees"> Total after delivery fees :  %s EGP</string>


    <string name="select_branch">Select Branch</string>
    <string name="enter_add">Please Enter Address</string>
    <string name="dismiss">Dismiss</string>
    <string name="dont_have_syndicate">To learn more about my Syndicate Packages for Sustainable Health, click here.. My Syndicate is the Syndicate of those who do not have a Syndicate.</string>
    <string name="logout_">Change Phone</string>
    <string name="syndicate_">Syndicate</string>
    <string name="confirm_phone">Please confirm phone number before payment</string>
    <string name="no_reciept">There are no invoices due for payment at this time</string>
    <string name="update_license">We regret that the payment has not been completed due to the expiration of your Ministry\'s license. Please renew until the payment process is completed</string>
    <string name="update_data">Update Data</string>
    <string name="order_sent">The request has been sent successfully.</string>
    <string name="order_not_sent">An error occurred while sending the request.</string>
    <string name="select_personal_pic">Please choose a profile picture.</string>
    <string name="select_phone_num">Please enter the mobile number.</string>
    <string name="select_year">Please enter the year.</string>
    <string name="select_licence_pic">Please select a license image.</string>
    <string name="image_uploaded">The image has been uploaded successfully.</string>
    <string name="card_request_not_found">No membership card renewal application was found.</string>
    <string name="licence_not_found">The Ministry\'s license renewal application was not found.</string>
    <string name="log_out">Do you want to log out!</string>
    <string name="close_app">Do you want to Exit!</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="your_message">Your Message</string>
    <string name="send_suggestion">Send</string>
    <string name="enter_message">Please enter your message</string>
    <string name="api_key">AIzaSyBOZv4riqvG1mthHKFZ5jUkdvLMzin4Bns</string>

    <string name="seha">Sustainable Health</string>
    <string name="packa">My Packages</string>
    <string name="telephone">Phone</string>
    <string name="our_location">Our Location</string>
    <string name="no_complains">There is no complains or suggestions</string>


</resources>