<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/user_profile">
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_man"/>
    </group>

    <group android:id="@+id/menu_seha">
        <item
            android:id="@+id/seha"
            android:title="@string/seha"
            android:icon="@drawable/delivered"/>
    </group>

    <group android:id="@+id/menu_packages">
        <item
            android:id="@+id/packages"
            android:title="@string/packa"
            android:icon="@drawable/delivered"/>
    </group>

    <group android:id="@+id/news_screen">
        <item
            android:id="@+id/news"
            android:title="@string/news_title"
            android:icon="@drawable/newspaper"/>
    </group>

    <group android:id="@+id/payment_screen">
        <item
            android:id="@+id/payment"
            android:title="@string/payments_title"
            android:icon="@drawable/payment"/>
    </group>

<!--    <group android:id="@+id/menu_syndicate">-->
<!--        <item-->
<!--            android:id="@+id/syndicate"-->
<!--            android:title="@string/syndicates"-->
<!--            android:icon="@drawable/guide"/>-->
<!--    </group>-->


    <group android:id="@+id/about">
        <item
            android:id="@+id/about_app_fragment"
            android:title="@string/aboutapp_title"
            android:icon="@drawable/ic_info"/>
    </group>

    <group android:id="@+id/settings">
        <item
            android:id="@+id/settings_fragment"
            android:title="@string/settings_title"
            android:icon="@drawable/settings"/>
    </group>

    <group android:id="@+id/contactus">
        <item
            android:id="@+id/contactus_fragment"
            android:title="@string/contactus_title"
            android:icon="@drawable/ic_bullhorn"/>
    </group>

    <group android:id="@+id/suggestions_">
        <item
            android:id="@+id/suggestions"
            android:title="@string/suggestions"
            android:icon="@drawable/suggestion"/>
    </group>

    <group android:id="@+id/menu_logout">
        <item
            android:id="@+id/logout"
            android:title="@string/logout_"
            android:icon="@drawable/logout"/>
    </group>

</menu>