<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:id="@+id/svContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="@dimen/_15sdp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.neqabty.superneqabty.core.ui.CustomSwitch
                    android:id="@+id/switchNotifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_settings"
                    android:textSize="?textSizeLarge" />


                <TextView
                    android:id="@+id/tvFontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/font_size"
                    android:textColor="@color/black"
                    android:textSize="?textSizeLarge" />

                <SeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="3"
                    android:min="1"
                    android:progressTint="@color/colorPrimary"
                    android:thumbTint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/font_size_small"
                        android:textColor="@color/black"
                        android:gravity="start"
                        android:textSize="?textSizeSmall" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/font_size_medium"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="?textSizeMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/font_size_large"
                        android:textColor="@color/black"
                        android:gravity="end"
                        android:textSize="?textSizeLarge" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>