<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.Html" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".paymentdetails.view.PaymentDetailsActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/svContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/rounded_bg"
            android:padding="@dimen/_15sdp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/llContent"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="?textSizeLarge" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textSize="?textSizeLarge" />

                <TextView
                    android:id="@+id/tvMemberNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textSize="?textSizeLarge" />

                <!--                <TextView-->
                <!--                    android:id="@+id/tvRequestID"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@{Html.fromHtml(@string/expiration_date_title(memberItem.billDate))}"-->
                <!--                    android:textSize="?textSizeLarge" />-->

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textSize="?textSizeLarge" />


                <TextView
                    android:id="@+id/tvDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="?textSizeLarge" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="LinearLayoutManager" />

                <TextView
                    android:id="@+id/tvFeatures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/other_services"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFeatures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="LinearLayoutManager" />

                <TextView
                    android:id="@+id/tvPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/payment_method"
                    android:textColor="@color/colorPrimary"
                    android:textSize="?textSizeLarge"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/rgPaymentMechanismType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/rb_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:buttonTint="@color/dark_green"
                        android:checked="true"
                        android:text="@string/payment_card"
                        android:textSize="?textSizeMedium" />

                    <ImageView
                        android:id="@+id/ivCard"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/visa" />

                    <RadioButton
                        android:id="@+id/rb_channel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dark_green"
                        android:text="@string/payment_channel"
                        android:textSize="?textSizeMedium" />

                    <LinearLayout
                        android:id="@+id/llChannels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_100sdp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/opay" />

                        <TextView
                            android:id="@+id/tvChannels"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{Html.fromHtml(@string/payment_store_locator)}"
                            android:textSize="?textSizeMedium" />
                    </LinearLayout>

                    <RadioButton
                        android:id="@+id/rb_fawry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dark_green"
                        android:text="@string/payment_fawry"
                        android:textSize="?textSizeMedium" />

                    <ImageView
                        android:id="@+id/ivFawry"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/fawry"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/rb_mobileWallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dark_green"
                        android:text="@string/payment_wallet"
                        android:textSize="?textSizeMedium"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/rb_meeza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dark_green"
                        android:text="@string/payment_meeza"
                        android:textSize="?textSizeMedium"
                        android:visibility="gone" />

                </RadioGroup>


                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    android:textSize="?textSizeMedium"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_30sdp"
                    />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>