<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/aboutapp_title"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:id="@+id/svContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_15sdp"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg"
                android:padding="@dimen/_15sdp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/developed_by"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/clLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:elevation="@dimen/_15ssp"
                    android:padding="@dimen/_15sdp"
                    android:shape="ring"
                    app:cardCornerRadius="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle">

                    <ImageView
                        android:id="@+id/ivLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="false"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_launcher_foreground" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/app_version"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clLogo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>